# crypto_sqlite

./: .gitignore  .gitlab-ci.yml  .gitmodules  .vd-lint  CMakeLists.txt  README.md
include/crypto_sqlite/: crypto_sqlite.h
include/crypto_sqlite/crypto/: IDataCrypt.h  PlaintextCrypt.h
include/cryptosqlite/: Codec.h  FileWrapper.h  cryptosqlite.h
include/cryptosqlite/crypto/: IDataCrypt.h  PlaintextCrypt.h
include/cryptosqlite/encryption/: IDataCrypt.h  PlaintextCrypt.h
sqlite/: .gitignore  CMakeLists.txt
sqlite/patches/: 00_sqlite3_header.patch
src/: crypto_sqlite.cpp  cryptosqlite.cpp
src/codec/: Codec.cpp  cinterface.cpp  cinterface.h  codec.c
src/crypto/: Crypto.cpp  Crypto.h  FileWrapper.h
src/csqlite/: SQLite3Mutex.h  csqlite.c  csqlite.h
src/file/: File.cpp  File.h
src/vfs/: VFS.cpp  VFS.h
test/: BasicTest.cpp  BasicTest.h  CMakeLists.txt  CryptoTest.cpp  CryptoTest.h  TestCrypt.h
